--- a/index.html
+++ b/index.html
@@ -6,7 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy Coffee</title>
 </head>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+ <link rel="stylesheet" href="css/style.css">
+<body>
+<header class="header"> 
+
+<a href="#" class="logo">
+    <img src="images/logo.png" alt="">
+</a>
+<nav class="navbar">
+<a href="#home">Home</a>
+<a href="#about">About</a>
+<a href="#menu">Menu</a>
+<a href="#products">Products</a>
+<a href="#review">Review</a>
+<a href="#home">Home </a>
+<a href="#blogs"> Blog</a>
 
 
+</nav>
+
+<div class="icons">
+    <div class="fas fa-search" id="search-btn"> </div>
+    <div class="fas fa-shopping-cart" id="cart-bin"></div>
+    <div class="fas fa-bars" id="menu-btn"></div>
+
+
+</div>
+
+
+</a>
+
+</header>
+
+<scrip rel="stylesheet" src="js/script.js"></scrip>
+
+</body>
 
 </html>
