--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
     <div class="fas fa-search" id="search-btn"> </div>
     <div class="fas fa-shopping-cart" id="cart-bin"></div>
     <div class="fas fa-bars" id="menu-btn"></div>
-
-
 </div>
 
+
+<div class="search-form">
+    <input type="search" id="search-box" placeholder="search">
+    <label for=search.box class="fas fa-search">   </label>
+</div>
 
 </a>
 
 </header>
 
-<scrip rel="stylesheet" src="js/script.js"></scrip>
+<script rel="stylesheet" src="js/script.js"></script>
 
 </body>
 
