--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </nav>
 
 <div class="icons">
-    <div class="fas fa-search" id="search-btn"> </div>
-    <div class="fas fa-shopping-cart" id="cart-bin"></div>
+    <div class="fas fa-search" id="search-btn"></div>
+    <div class="fas fa-shopping-cart" id="cart-btn"></div>
     <div class="fas fa-bars" id="menu-btn"></div>
 </div>
 
@@ -38,7 +38,43 @@
     <label for=search.box class="fas fa-search">   </label>
 </div>
 
-</a>
+<div class="cart-items-container">
+    <div class="cart-item">
+        <span class="fas fa-times"></span>
+        <img src="images/cart-item-1.png" alt="">
+        <div class="content">
+            <h3>Item # 01</h3>
+            <div class="price">$15.99/-</div>
+        </div>
+    </div>
+    <div class="cart-item">
+        <span class="fas fa-times"></span>
+        <img src="images/cart-item-2.png" alt="">
+        <div class="content">
+            <h3>Item # 02</h3>
+            <div class="price">$15.99/-</div>
+        </div>
+    </div>
+    <div class="cart-item">
+        <span class="fas fa-times"></span>
+        <img src="images/cart-item-3.png" alt="">
+        <div class="content">
+            <h3>Item # 03</h3>
+            <div class="price">$15.99/-</div>
+        </div>
+    </div>
+    <div class="cart-item">
+        <span class="fas fa-times"></span>
+        <img src="images/cart-item-4.png" alt="">
+        <div class="content">
+            <h3>Item # 04</h3>
+            <div class="price">$15.99/-</div>
+        </div>
+    </div>
+    <a href="#" class="btn">checkout now</a>
+</div>
+
+
 
 </header>
 
