--- a/index.html
+++ b/index.html
@@ -80,6 +80,38 @@
 
 
 
+<section class="home" id="home">
+
+    <div class="content">
+        <h3>fresh coffee in the morning</h3>
+        <p>Start your morning off with piping a hot coffee made with the best ingredients</p>
+        <a href="#" class="btn">get yours now</a>
+    </div>
+
+</section>
+
+
+
+<section class="about" id="about">
+
+    <h1 class="heading"> <span>about</span> us </h1>
+
+    <div class="row">
+
+        <div class="image">
+            <img src="images/about-img.jpeg" alt="">
+        </div>
+
+        <div class="content">
+            <h3>what makes our coffee special?</h3>
+            <p>Our coffee is imported from the farthest regions of Australia, where they are cultivated rigoursly to create intense flavors.</p>
+            <p>From Australia, the beans take a one day trip across the globe to ensure they arrive fresh. If the beans arrive too late, we discard that shipment and close the shop until we receive better ingredients.</p>
+            <a href="#" class="btn">learn more</a>
+        </div>
+
+    </div>
+
+</section>
 
 
 
